--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FirebaseSearch</string>
+    <string name="place">Place</string>
+    <string name="username">username</string>
 </resources>
