Linked the search activity with the profil page Add a button that go to the profil page //temporaire pour essaie Modify the profile variables like the new BDD structure modidfy some items place in profile_layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FirebaseSearch</string>
     <string name="place">Place</string>
     <string name="username">username</string>
+    <string name="title_activity_profile">Profile page</string>
 </resources>
