i added some design to the places activity (backgroung/button...) and some small changes in the main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="place">Place</string>
     <string name="username">username</string>
     <string name="title_activity_profile">Profile page</string>
+    <string name="title_activity_place">Place page</string>
 </resources>
