Added the navigation bar : - I added the java code for navigation bar - I created the the toolbar layout - I created the menu folder and menu layout and design the navigation bar elements - I added the toolbar and menu to the activity_main layout Still to change the NAV-BAR icon and add the click on items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">FirebaseSearch</string>
+    <string name="app_name">Guiddini</string>
     <string name="place">Place</string>
     <string name="username">username</string>
     <string name="title_activity_profile">Profile page</string>
     <string name="title_activity_place">Place page</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
