I added the click on items and the NAV-BAR will be closed on click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Guiddini</string>
+    <string name="app_name"> </string>
     <string name="place">Place</string>
     <string name="username">username</string>
     <string name="title_activity_profile">Profile page</string>
