--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -21,4 +21,19 @@
     <string name="contact">Contact</string>
     <string name="la_partie_description_n_est_pas_encore_termin">la partie description n\'est pas encore terminé</string>
     <string name="description_de_la_place">Description de la place</string>
+    <string name="you_liked_the_app_please_give_us_a_feedback">Vous avez aimé l\'application? merci de nous faire part de vos commentaires!</string>
+    <string name="i_loved_it">je l\'ai aimé</string>
+    <string name="i_hated_it">j\'ai détesté</string>
+    <string name="good_enough">Assez bien</string>
+    <string name="submit">Soumettre</string>
+    <string name="find_us">Trouve nous</string>
+    <string name="very_bad">Très mauvais</string>
+    <string name="Really_bad">Vraiment mauvais!</string>
+    <string name="Not_that_good">Pas si bon!</string>
+    <string name="Good_job">Bon travail</string>
+    <string name="Awsome">Impressionnant!</string>
+    <string name="Amazing">Incroyable!</string>
+    <string name="Employer">Employer</string>
+    <string name="Aller_vers_cet_endroit">Aller vers cet endroit?</string>
 </resources>
+
