I added translation to the part where the user has to activate the camera and the localisation and also i deleted some warnings that were generated by the compiler in the mainActivity.java

--- a/app/src/main/res/values-ar-rDZ/strings.xml
+++ b/app/src/main/res/values-ar-rDZ/strings.xml
@@ -38,7 +38,7 @@
     <string name="Employer">موظف</string>
     <string name="Aller_vers_cet_endroit">اذهب إلى هذا المكان?</string>
     <string name="choose_languages">اختر اللغة</string>
-    <string name="activer_la_cam_ra">Activer la caméra</string>
-    <string name="activer_la_localisation">Activer la localisation</string>
+    <string name="activer_la_cam_ra">تفعيل الكاميرا</string>
+    <string name="activer_la_localisation"> تفعيل الموقع </string>
 </resources>
 
