--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,6 @@
     <string name="Employer">Employee</string>
     <string name="Aller_vers_cet_endroit">Go to these place?</string>
     <string name="choose_languages">choose language</string>
-    <string name="activer_la_cam_ra">Activer la caméra</string>
-    <string name="activer_la_localisation">Activer la localisation</string>
+    <string name="activer_la_cam_ra">Activate the camera</string>
+    <string name="activer_la_localisation">Activate the localisation</string>
 </resources>
